--- a/style.css
+++ b/style.css
@@ -1,32 +1,80 @@
-nav{
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+#background-header{
+    background: #FFF8F3;;
+}
+nav {
     display: flex;
     justify-content: space-between;
-    
+    margin: 0px 40px 10px 50px;
+
 }
-li{
+
+li {
     color: red;
     margin-right: 20px;
-   
-  
 }
-li a{
+
+li a {
     text-decoration: none;
 }
-ul{
+
+ul {
     display: flex;
     list-style: none;
     align-items: center;
     margin-right: 20px;
 }
-.btn-primary{
+
+.btn-primary {
     background-color: orange;
     color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
+    padding: 13px 25px;
+    border-radius: 3px;
     border: 0px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
-.btn-primary a{
+
+/* color: var(--White-Color, #FFF);
+        text-align: center;
+        font-family: Open Sans;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+} */
+
+.btn-primary a {
     text-decoration: none;
+}
+
+.contact {
+    color: #FD6E0A;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    padding: 7px 25px;
+    margin-left: 25px;
+    border-radius: 3px;
+
+}
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+
+.header h2 {
+    color: #474747;
+}
+.main-header{
+    display: flex;
 }
 
 /* button {
@@ -34,7 +82,7 @@ ul{
     color: white;
 } */
 
-.clolor-orange {
-    color: orange;
+.banner-img {
+    width: 350px;
+    height: 350px;
 }
-
